XMLExper/m12/m12_64_1_tinyxml2/comparisono.txt
tinyxml2.cpp: In member function ‘char* tinyxml2::XMLDocument::Identify(char*, tinyxml2::XMLNode**, bool)’:
tinyxml2.cpp:762:108: error: lvalue required as left operand of assignment
  762 |         /*PCI*/dynamic_cast<tinyxml2::XMLText*>(returnNode) = CreateUnlinkedNode<XMLUnknown>( _commentPool );
      |                                                                                                            ^
diff: tinyxml2.o: No such file or directory
